<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/gradient_header">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nobile"
        android:gravity="center"
        android:text="@string/home_page"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textStyle="bold"
        />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:fontFamily="@font/nobile"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <TextView
        android:layout_below="@id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="With"
        android:fontFamily="@font/nobile"
        android:textSize="15dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/black" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnFlogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/blue"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="7dp"
        android:layout_above="@id/or"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:text="@string/facebook"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

    </androidx.cardview.widget.CardView>

<!--    <com.google.android.gms.common.SignInButton-->
<!--        android:id="@+id/sign_in_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/btnFlogin"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_centerHorizontal="true"/>-->

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:fontFamily="@font/nobile"
        android:gravity="center_horizontal"
        android:textSize="18sp"/>

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/or"
        android:text="Google"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        app:isDarkTheme="true"/>


</RelativeLayout>