<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformation"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/gradient_header">

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nobile"
            android:gravity="center"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPhoto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="150dp"
                app:civ_border_color="#0000FF"
                android:layout_height="150dp" />

<!--            <ImageView-->
<!--                android:id="@+id/ivPhoto"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="300dp" />-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/nobile"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="end"
                android:fontFamily="@font/nobile"
                android:text="@string/fetch_here"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nobile"
                android:text="Email :"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nobile"
                android:text="@string/fetch_here"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nobile"
                android:text="User ID :"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/tvUID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nobile"
                android:text="@string/fetch_here"
                android:textColor="@color/blue"
                android:textSize="13sp"
                android:gravity="end"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/blue"
        card_view:cardCornerRadius="10dp"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        card_view:cardElevation="7dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="70dp"
            android:text="@string/log_out"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_horizontal"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>